# hogarcito

./: .gitignore  Dockerfile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: index.md
docs/app/: bash.md  execshield.md  git.md  samba.md  ssh.md  ufw.md
docs/os/: debian.md  raspios.md  ubuntu.md  windows.md
