[project]
name = "hogarcito"
version = "1.0"
description = ""
authors = []
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "mkdocs-material==9.1.5"
]
[project.optional-dependencies]
test = [
    "black==23.3.0",
    "mypy==1.1.1",
    "pytest==7.2.2",
    "pytest-cov==4.0.0",
]
#[project.scripts]
#tasker = "command:main"

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.mypy]
ignore_missing_imports = true
warn_no_return = false
warn_return_any = false
follow_imports = "skip"
strict_optional = true

[tool.coverage.run]
branch = true
omit = ["tests/*"]
[tool.coverage.report]
skip_empty = true
show_missing = true
